# dnf-app-center

./: .gitignore  COPYING  README.md  dnf-app-center-updater-notify.spec  org.dnf.AppCenter.Updater.desktop  org.dnf.AppCenter.desktop  pyproject.toml  run-local.sh
appcenter/: appstream_catalog.py  dnf_backend.py  i18n.py  main.py  models.py  privileged_helper.py  ui.py  updater_config.py  updater_service.py
po/: LINGUAS  POTFILES.in  de.po  es.po  fr.po  it.po  ja.po  ko.po  org.dnf.AppCenter.pot  pt_BR.po  ru.po  zh_CN.po  zh_TW.po
polkit/: 50-dnf-app-center-nobara-sync.rules  org.nobara.sync.policy
